--- a/src/style.css
+++ b/src/style.css
@@ -1,139 +1,110 @@
-body {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
-  min-height: 100vh;
-  display: flex;
-  background-color: #fff;
 }
 
-ul {
-  list-style: none;
-  margin: 0;
+body {
+  background-color: #fff;
+  box-sizing: border-box;
+}
+
+.card-body,
+#notice {
+  width: 500px;
+  margin: 10px auto;
   padding: 0;
 }
 
-button {
-  border: none;
-  outline: none;
-  background-color: transparent;
-  cursor: pointer;
+.shadow {
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 2px 3px rgb(207, 207, 207);
 }
 
-.app {
-  border: 1px solid #ccc;
-  box-shadow: 0 8px 15px #ccc;
-  width: 35%;
-  margin: auto;
+.to-do-header {
+  font-size: 19px;
+  font-weight: bold;
 }
 
-.flex-row {
+.card-header,
+.task-entry,
+.task-item,
+.card-footer {
+  padding: 15px;
+}
+
+.task-entry {
+  width: 100%;
+  border: 0;
+  border-top: 1px solid #f6f6f6;
+  outline: 0;
+}
+
+.task-entry::placeholder {
+  font-style: italic;
+  font-size: 14px;
+}
+
+.task-item {
   display: flex;
-  flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  border: 1px solid #f6f6f6;
 }
 
-.header {
-  padding: 10px 15px;
-  border-bottom: 1px solid #ccc;
-  background-color: rgb(248, 248, 248);
+.entry,
+.card-header {
+  position: relative;
 }
 
-h1 {
-  font-size: 1rem;
+.entry i,
+.card-header i {
+  position: absolute;
+  top: 20px;
+  right: 20px;
 }
 
-i {
-  color: rgb(168, 166, 166);
-  font-weight: 300;
-  font-size: 0.7rem;
+.icons {
+  height: 15px;
+  width: 15px;
+  float: right;
 }
 
-.fa-level-down-alt {
-  transform: rotate(90deg);
+#to-do-list {
+  height: auto;
 }
 
-.form {
-  border-bottom: 1px solid #ccc;
-  padding: 0 5px;
-}
-
-::placeholder {
-  color: #b3bac5;
-  font-style: italic;
-}
-
-.input {
-  flex-grow: 1;
-  margin-right: 5px;
-  height: 30px;
-  border: none;
-  outline: none;
-  padding: 10px 15px;
-  font-size: 1rem;
-  font-style: italic;
-  color: #999;
-}
-
-.todo {
-  padding: 10px 0 10px 15px;
-  border-bottom: 1px solid #ccc;
-  transition: 0.5s;
-}
-
-.todo-text {
-  border: none;
-  outline: none;
-  flex-grow: 1;
-  font-size: 1rem;
+#clear-complete {
   background-color: transparent;
+  color: #888;
+  font-size: 0.9em;
+  border: 0;
+  outline: 0;
 }
 
-.todo-text:focus {
-  text-decoration: none;
-  color: #000;
+#clear-complete:hover {
+  text-decoration: underline;
+  color: #333;
 }
 
-.checkbox {
-  margin-right: 10px;
+.task-description {
+  width: 100%;
+  margin: 0 10px;
+}
+
+.card-footer {
+  text-align: center;
+  background-color: #f6f6f6;
 }
 
 .completed {
-  text-decoration: line-through;
-  color: #999;
+  text-decoration: black line-through;
 }
 
-.dots {
-  cursor: all-scroll;
-  height: 150%;
-  font-size: 1.1rem;
-  padding: 10px;
+.hide {
+  display: none;
 }
 
-.dots:hover {
-  color: #000;
-}
-
-.footer {
-  background-color: rgb(240, 235, 235);
-  width: 100%;
-  height: 50px;
-}
-
-.clear-btn {
-  width: 50%;
-  margin: 0 auto;
-  color: rgb(116, 112, 112);
-  font-size: 1rem;
-}
-
-.clear-btn:hover {
-  color: #000;
-  text-decoration: underline;
-}
-
-.current-active {
-  opacity: 0;
+.show {
+  display: block;
 }
